k8s/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-express
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/opt-default: "true"
        io.kompose.service: mongo-express
    spec:
      containers:
        - env:
            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
              value: example
            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
              value: root
            - name: ME_CONFIG_MONGODB_URL
              value: mongodb://root:example@mongo:27017/
          image: mongo-express
          name: mongo-express
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
