k8s/pasarela-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: pasarela
  name: pasarela
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pasarela
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/opt-default: "true"
        io.kompose.service: pasarela
    spec:
      containers:
        - image: pasarela:2.0
          name: pasarela
          ports:
            - containerPort: 8090
          resources: {}
      restartPolicy: Always
status: {}
