k8s/mongo-express-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-lb #nombre que identificador que le damos al servicio
spec:
  type: LoadBalancer
  ports:
  - port: 8081 #puerto de acceso externo
    targetPort: 8081 #puerto de acceso interno
  selector:
    io.kompose.service: mongo-express #nombre del servicio que queremos que se interponga el balanceador de carga
