k8s/pasarela-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pasarela-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8090 #puerto de acceso externo
    targetPort: 8090 #puerto de acceso interno
  selector:
    io.kompose.service: pasarela
